# telegram-bot-template

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
services/backend/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
services/backend/src/backend/: api.py  db.py  main.py  models.py  services.py  settings.py  storage.py
services/backend/src/backend/repos/: __init__.py  base.py  conversation.py  factory.py
services/backend/src/domain/: __init__.py  left_or_right.py  left_right_switch.py  tripled.py
services/backend/src/llm/: __init__.py  aggregator.py  context.py  dialogue_service.py  factory.py  models.py  workflow.py
services/backend/src/llm/client/: __init__.py  base.py  chatgpt.py  factory.py  fake.py
services/backend/src/llm/repo/: base.py  in_memory.py  models.py  redis.py
services/backend/src/llm/tasks/: base.py  initial_answer.py  joke.py  math.py
services/backend/tests/: conftest.py  test_message_endpoint.py
services/backend/tests/integration/: test_api_left_right_switch.py  test_left_or_right.py  test_message_endpoint.py  test_some_endpoint.py
services/backend/tests/unit/: test_left_right_switch.py  test_llm_client.py  test_llm_workflow.py
services/tg_bot/: Dockerfile  README.md  pyproject.toml
services/tg_bot/src/bot/: backend.py  handlers.py  keyboard.py  main.py  settings.py
services/tg_bot/src/fakes/: __init__.py  client_session.py  message.py
services/tg_bot/tests/: test_any_text.py  test_handlers.py  test_left_or_right.py  test_left_right_switch.py
src/bot/: handlers.py
(+9 files in other folders)
