[project]
name = "bot_backend"
version = "0.1.0"
description = "FastAPI backend for tg bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "ipython>=9.7.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
    "openai>=2.15.0",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
