[project]
name = "bot"
version = "0.1.0"
description = "Telegram bot"
requires-python = ">=3.12,<3.14"
dependencies = [
  "aiogram>=3.22.0",
  "ipython>=9.7.0",
]

[dependency-groups]
dev = [
  "black>=25.11.0",
  "flake8>=7.3.0",
  "isort>=7.0.0",
  "mypy>=1.18.2",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "pytest-mock>=3.15.1",
]
